<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="AllInOne_Standard" Id="{55925973-2c37-4945-8b0b-29acbff75300}">
    <Declaration><![CDATA[TYPE AllInOne_Standard :
STRUCT
	
	MesData			: AllInOne;
	
	MesPressure		: REAL; (*(bar) Pressure*)
	MesGHI			: REAL; (* (W/m²) Horizontal irradiance*)
	
	
END_STRUCT
END_TYPE


	

	

	



	
	
]]></Declaration>
  </DUT>
</TcPlcObject>